Fixed searchicon not showing
* (try #1)

--- a/src/css/champs.css
+++ b/src/css/champs.css
@@ -51,7 +51,6 @@
 }
 
 #search-champion {
-    background-image: url('/src/img/searchicon.png');
     background-position: 10px 12px;
     background-repeat: no-repeat;
     max-width: 200px;
